# audio

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
audio/: __init__.py  in_audio.py  out_audio.py
docs/: AAC_SETUP_SUCCESS.md  BLUETOOTH_AUDIO_TROUBLESHOOTING.md  QUICK_REFERENCE.md  README.md
examples/: microphone.py  speakers.py  verify_aac_support.sh
examples/song/: timing.txt
tests/: conftest.py  test_audio.py
